[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
actix-identity = "0.8.0"
jsonwebtoken = "9.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = { version = "0.4.37", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "runtime-actix-native-tls",
    "macros",
    "uuid",
] }
bcrypt = "0.15.0"
futures = "0.3.30"
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[dev-dependencies]
actix-test = "0.1.0"
tokio-test = "0.4.3"
test-log = { version = "0.2.13", features = ["trace"] }
